hls/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp.clang-tidy.loop-label.out.log
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:1318:7: warning: Added loop label VITIS_LOOP_1207_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1207_1: 
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:1318:7: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:2292:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:2292:5: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:2306:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:2306:5: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:2320:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:2320:5: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:3949:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:3949:7: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:41051:56: error: Invalid Directive: for current device, ram_2p + bram is invalid combination for BIND_STORAGE's option 'type + impl' [clang-diagnostic-error]
#pragma HLS BIND_STORAGE variable=accumulator_ram type=ram_2p impl=bram
                                                       ^
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:41060:9: warning: Added loop label VITIS_LOOP_52_1:   [xilinx-label-all-loops]
        for(int b=0; b<2; b++)
        ^~~
        VITIS_LOOP_52_1: 
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:41060:9: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:41061:13: warning: Added loop label VITIS_LOOP_53_2:   [xilinx-label-all-loops]
            for(int l=0; l<10; l++)
            ^~~
            VITIS_LOOP_53_2: 
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:41061:13: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:41062:17: warning: Added loop label VITIS_LOOP_54_3:   [xilinx-label-all-loops]
                for(int f=0; f<1024; f++)
                ^~~
                VITIS_LOOP_54_3: 
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:41062:17: note: FIX-IT applied suggested code changes
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:41120:14: warning: Added loop label VITIS_LOOP_112_4:   [xilinx-label-all-loops]
             for(int b=0; b<10; b++) {
             ^~~
             VITIS_LOOP_112_4: 
/home/brett/Documents/FX_Correlator/pfb/hls_correlator/hls_correlator/hls/.autopilot/db/correlator_top.pp.0.cpp:41120:14: note: FIX-IT applied suggested code changes
